# MacOS-MCP

./: Dockerfile  README.md  pyproject.toml
src/: action_handlers.py  vnc_client.py
src/mcp_remote_macos_use/: __init__.py  fastapi_server.py  livekit_handler.py  server.py
