[project]
name = "mcp_remote_macos_use"
version = "0.1.0"
description = "macOS desktop automation MCP server (VNC + SSH)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "paramiko>=3.5.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",
    "pillow>=10.0.0",
    "pyDes>=2.0.1",
    "cryptography>=44.0.0",
    "mcp>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_remote_macos_use"]
